; ModuleID = '/home/carl/AnghaBench/vlc/lib/extr_media.c_libvlc_media_new_location.c'
source_filename = "/home/carl/AnghaBench/vlc/lib/extr_media.c_libvlc_media_new_location.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [18 x i8] c"Not enough memory\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @libvlc_media_new_location(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = call i32* @input_item_New(i8* %8, i32* null)
  store i32* %9, i32** %6, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %14, label %12

12:                                               ; preds = %2
  %13 = call i32 @libvlc_printerr(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  store i32* null, i32** %3, align 8
  br label %21

14:                                               ; preds = %2
  %15 = load i32*, i32** %4, align 8
  %16 = load i32*, i32** %6, align 8
  %17 = call i32* @libvlc_media_new_from_input_item(i32* %15, i32* %16)
  store i32* %17, i32** %7, align 8
  %18 = load i32*, i32** %6, align 8
  %19 = call i32 @input_item_Release(i32* %18)
  %20 = load i32*, i32** %7, align 8
  store i32* %20, i32** %3, align 8
  br label %21

21:                                               ; preds = %14, %12
  %22 = load i32*, i32** %3, align 8
  ret i32* %22
}

declare dso_local i32* @input_item_New(i8*, i32*) #1

declare dso_local i32 @libvlc_printerr(i8*) #1

declare dso_local i32* @libvlc_media_new_from_input_item(i32*, i32*) #1

declare dso_local i32 @input_item_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
